2006-05-12  simon.zheng  <simon.zheng@sun.com>

	Fix for Bug 341521
	* gui/contact-editor/contact-editor.glade: Change the label
	name of categories button.

2006-04-27  Boby Wang <boby.wang@sun.com>

	** Fix for bug # 336470

	* gui/contact-editor/fullname.glade:
	Add labelled-by relationship to gtkcombo.

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Patch from PR Suman to add icons missing in menu items.

	* gui/component/addressbook-view.c: Added icons for forward and send.

2006-02-18  M Victor Aloysius J <victoraloy@gmail.com>

	** Fixes bug #317512
	
	* gui/eab-contact-editot.c:
	* gui/eab-popup.h:
	* gui/eab-popup.c:
	Hyperlinked email-addresses and websites in preview pane support right 
	click mouse options. 

2006-04-21  Simon Zheng  <simon.zheng@sun.com>

	Fix for bug #337604
	* printing/e-contact-print.c: (e_contact_print_response):
	Should destory the print dialog window after clicking Print
	Preview button.

2006-04-21  Devashish Sharma  <sdevashish@novell.com>

	Fix for Bug 333869.
	* printing/e-contact-print-types.h: Remove member letter_tabs in
	struct _EContactPrintStyle.
	* printing/e-contact-print.c (e_contact_start_new_page),
	(e_contact_get_contact_size), (e_contact_print_contact),
	(e_contact_start_new_column), (complete_sequence),
	(e_contact_build_style), (e_contact_print_response),
	(e_contact_print_preview):
	To be consistent with minicard view, remove functions and data structure 
	associated with letter tab printing.
	Patch by Simon Zheng <simon.zheng@sun.com>.

2006-04-21  Devashish Sharma  <sdevashish@novell.com>

	Fix for Bug 336713
	* gui/merging/eab-contact-merging.c: (cancelit): After selecting 
	"cancel duplicate" when pasting contacts, can't remove those
	EContactMergingLookup. Make finished_lookup() available. 
	Patch by Simon Zheng <simon.zheng@sun.com>.

2006-03-29  Li Yuan <li.yuan@sun.com>

	Fix for bug #336454
	* gui/component/addressbook-view.c:
	(source_selector_key_press_event_callback):