@@ -1,3 +1,9 @@
+2006-05-17  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	Fix for gnome bug #341931, farsiweb #562
+	* gui/contact-editor/e-contact-editor.c: Mark a few messages for
+	  translation.
+
 2006-05-12  simon.zheng  <simon.zheng@sun.com>
 
 	Fix for Bug 341521
